链接了slider与执行按键
通过connect函数，使slider发出鼠标释放的信号时，相当于点击一次执行算法按键

--- a/Cpp_Big_Homework/widget.ui
+++ b/Cpp_Big_Homework/widget.ui
@@ -373,7 +373,7 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="run_pushButton">
    <property name="geometry">
     <rect>
      <x>490</x>
